@@ -4,6 +4,7 @@ import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class URL {
 	
@@ -24,7 +25,7 @@ public class URL {
 //		}
 //		
 //		return list;
-		return Arrays.asList(s.split(",")).stream().map(x -> Integer.parseInt(x)).toList();
+		return Arrays.asList(s.split(",")).stream().map(x -> Integer.parseInt(x)).collect(Collectors.toList());
 	}
 
 }
